--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     compileSdk 32
 
+    buildFeatures{
+        viewBinding = true
+    }
+
     defaultConfig {
         applicationId "com.kyhskola.smoothfightersproject"
         minSdk 21
@@ -33,6 +37,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.fragment:fragment-ktx:1.5.4'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
